--- a/css/styles.css
+++ b/css/styles.css
@@ -67,17 +67,18 @@ ul {
   padding: 0 15px;
 }
 
-.logo-link {
+.nav__logo-link,
+.footer-contacts__logo-link {
   color: var(--accent-color);
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
 }
-.logo-black {
+.nav__logo-link--inverse {
   color: var(--primary-text-color);
 }
-.logo-white {
+.footer-contacts__logo-link-inverse {
   color: var(--main-text-color);
 }
 
@@ -88,8 +89,8 @@ ul {
   margin-left: 93px;
 }
 
-.site-nav .item-nav + .item-nav {
-  margin-left: 50px;
+.site-nav__item:not(:last-child) {
+  margin-right: 50px;
 }
 
 .nav {
@@ -97,11 +98,11 @@ ul {
   align-items: center;
 }
 
-.item-nav {
+.site-nav__item {
   position: relative;
 }
 
-.site-nav .link.link.current::after {
+.site-nav__link--active::after {
   content: '';
   position: absolute;
   bottom: 0;
@@ -118,7 +119,7 @@ ul {
   justify-content: space-between;
 }
 
-.site-nav .link {
+.site-nav__link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -133,19 +134,19 @@ ul {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link:hover,
-.link:focus {
+.site-nav__link:hover,
+.site-nav__link:focus {
   color: var(--accent-color);
 }
-.link.current {
+.site-nav__link--active {
   color: var(--accent-color);
 }
 
-.contact-block {
+.contact-header {
   display: flex;
 }
 
-.contact {
+.contact-header__link {
   display: flex;
   align-items: center;
   font-weight: 500;
@@ -159,12 +160,12 @@ ul {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-item:not(:last-child) {
+.contact-header__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.contact:hover,
-.contact:focus {
+.contact-header__link:hover,
+.contact-header__link:focus {
   color: var(--accent-color);
 }
 
@@ -172,12 +173,7 @@ ul {
   margin-left: 50px;
 }
 
-.mail-icon {
-  fill: currentColor;
-  margin-right: 10px;
-}
-
-.tel-icon {
+.contact-header__icon {
   fill: currentColor;
   margin-right: 10px;
 }
@@ -189,7 +185,10 @@ ul {
   flex-direction: column;
 }
 
-.hero-background {
+.hero {
+  padding-top: 200px;
+  padding-bottom: 200px;
+  text-align: center;
   max-width: 1600px;
   width: 100%;
   height: 600px;
@@ -201,13 +200,7 @@ ul {
   background-size: cover;
 }
 
-.hero {
-  padding-top: 200px;
-  padding-bottom: 200px;
-  text-align: center;
-}
-
-.hero-title {
+.hero__title {
   margin-bottom: 30px;
   color: var(--main-text-color);
   font-weight: 900;
@@ -219,7 +212,7 @@ ul {
   max-width: 696px;
 }
 
-.button {
+.hero__button {
   padding: 10px 32px;
   border-radius: 4px;
   border: none;
@@ -239,8 +232,8 @@ ul {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button:hover,
-.button:focus {
+.hero__button:hover,
+.hero__button:focus {
   background-color: #188ce8;
 }
 
@@ -279,7 +272,7 @@ ul {
   padding: 40px;
 }
 
-.btn-close {
+.modal__btn-close {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -296,7 +289,7 @@ ul {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn-close:hover {
+.modal__btn-close:hover {
   fill: var(--accent-color);
 }
 
@@ -314,19 +307,19 @@ ul {
   padding: 25px 100px;
 }
 
-.item-list {
+.feature-list {
   display: flex;
 }
 
-.item-list .item {
+.feature-list__item {
   max-width: 270px;
 }
 
-.item:not(:last-child) {
+.feature-list__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.title {
+.feature-list__title {
   margin-bottom: 10px;
   color: var(--title-text-color);
   font-size: 14px;
@@ -334,7 +327,7 @@ ul {
   text-transform: uppercase;
 }
 
-.text {
+.feature-list__text {
   color: var(--secondary-text-color);
   font-size: 14px;
   line-height: 1.71;
@@ -344,7 +337,7 @@ ul {
   padding-top: 0;
 }
 
-.section-title {
+.section__title {
   margin-bottom: 50px;
   color: var(--title-text-color);
   font-size: 36px;
@@ -356,9 +349,13 @@ ul {
   display: flex;
 }
 
-.item-overlay-work {
+.work-list__item {
   position: relative;
   display: block;
+}
+
+.work-list__item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .overlay-work {
@@ -372,7 +369,7 @@ ul {
   background-color: rgba(47, 48, 58, 0.8);
 }
 
-.text-work-overlay {
+.overlay-work__text {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -386,15 +383,15 @@ ul {
   background-color: var(--primary-bg-color);
 }
 
-.cards-list {
+.card-list {
   display: flex;
 }
 
-.px-30 {
+.team-member {
   padding: 30px 32px;
 }
 
-.card {
+.card-list__item {
   text-align: center;
   background-color: var(--main-text-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -402,7 +399,11 @@ ul {
   border-radius: 0px 0px 4px 4px;
 }
 
-.card-title {
+.card-list__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.team-member__title {
   margin-bottom: 10px;
   color: var(--primary-text-color);
   font-weight: 500;
@@ -410,7 +411,7 @@ ul {
   line-height: 1.18;
 }
 
-.card-position {
+.team-member__position {
   color: var(--secondary-text-color);
   font-size: 16px;
   line-height: 1.18;
@@ -422,11 +423,11 @@ ul {
   margin-top: 16px;
 }
 
-.socials-list .item:not(:last-child) {
+.socials-list__item:not(:last-child) {
   margin-right: 10px;
 }
 
-.socials-list-link {
+.socials-list__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -440,23 +441,27 @@ ul {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.socials-list-link:focus {
+.socials-list__link:focus {
   background-color: var(--accent-color);
   color: #ffffff;
 }
 
-.socials-list-link:hover {
+.socials-list__link:hover {
   background-color: var(--accent-color);
   color: #ffffff;
 }
 
-.company-list {
+.client-list {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.client-link {
+.client-list__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.client-list__link {
   display: block;
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -468,8 +473,8 @@ ul {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.client-link:hover,
-.client-link:focus {
+.client-list__link:hover,
+.client-list__link:focus {
   color: var(--accent-color);
   border-color: var(--accent-color);
 }
@@ -485,14 +490,14 @@ ul {
   margin-bottom: 9px;
 }
 
-.address .link {
+.address__link {
   color: var(--main-text-color);
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
 }
 
-.contact-address .contact {
+.contacts__link {
   color: var(--address-contact-color);
   font-style: normal;
   font-size: 14px;
@@ -502,17 +507,17 @@ ul {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contact-address .contact:hover,
-.contact-address .contact:focus {
+.contacts__link:hover,
+.contacts__link:focus {
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
-.email {
+.contacts__link:not(:last-child) {
   display: inline-block;
   margin-bottom: 9px;
 }
 
-.footer-contact {
+.footer-contacts {
   margin-right: 70px;
 }
 
@@ -522,7 +527,7 @@ ul {
   justify-content: space-between;
 }
 
-.join-title {
+.join__text {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -536,11 +541,11 @@ ul {
   display: flex;
 }
 
-.join-list .item:not(:last-child) {
+.join-list__item:not(:last-child) {
   margin-right: 10px;
 }
 
-.join-list-link {
+.join-list__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -555,14 +560,24 @@ ul {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.join-list-link:focus,
-.join-list-link:hover {
+.join-list__link:focus,
+.join-list__link:hover {
   background-color: var(--accent-color);
   color: #ffffff;
 }
 
 .join {
   margin-right: 93px;
+}
+
+.block-form__text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--main-text-color);
+  margin-bottom: 20px;
 }
 
 .visually-hidden {
@@ -578,7 +593,7 @@ ul {
   overflow: hidden;
 }
 
-.btn {
+.filter-list__button {
   font-family: inherit;
   color: var(--primary-text-color);
   background: var(--primary-bg-color);
@@ -596,8 +611,8 @@ ul {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.btn:hover,
-.btn:focus {
+.filter-list__button:hover,
+.filter-list__button:focus {
   color: var(--main-text-color);
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -610,11 +625,11 @@ ul {
   margin-bottom: 50px;
 }
 
-.filter-list .item-btn + .item-btn {
+.filter-list .filter-list__item + .filter-list__item {
   margin-left: 8px;
 }
 
-.caption {
+.p-20-24__title {
   color: var(--primary-text-color);
   font-weight: 700;
   font-size: 18px;
@@ -622,7 +637,7 @@ ul {
   letter-spacing: 0.06em;
 }
 
-.content {
+.p-20-24__content {
   color: var(--secondary-text-color);
   font-size: 16px;
   line-height: 1.88;
@@ -634,7 +649,7 @@ ul {
   flex-wrap: wrap;
 }
 
-.portfolio-list .item {
+.portfolio-list__item {
   margin-right: 30px;
   margin-bottom: 30px;
   background: #ffffff;
@@ -644,16 +659,16 @@ ul {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-list .item:nth-child(3n) {
+.portfolio-list__item:nth-child(3n) {
   margin-right: 0;
 }
 
-.portfolio-list .item:nth-last-child(-n + 3) {
+.portfolio-list__item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
 
-.portfolio-list .item:hover,
-.portfolio-list .item:focus {
+.portfolio-list__item:hover,
+.portfolio-list__item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -663,17 +678,7 @@ ul {
   overflow: hidden;
 }
 
-.overlay-cards {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 1.555;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-  padding: 63px 24px 63px 24px;
-}
-
-.cards-image-overlay {
+.cards-image__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -686,10 +691,18 @@ ul {
   transition-property: transform, opacity;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.555;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  padding: 63px 24px 63px 24px;
 }
 
-.link:hover .cards-image > .cards-image-overlay,
-.link:focus .cards-image > .cards-image-overlay {
+.link:hover .cards-image__overlay,
+.link:focus .cards-image__overlay {
   opacity: 1;
   transform: translateY(0);
 }
@@ -705,11 +718,11 @@ img {
   border-right: 1px solid #eeeeee;
 }
 
-.form-join {
+.form {
   display: flex;
 }
 
-.email-form {
+.form__email {
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
@@ -721,20 +734,41 @@ img {
   outline: none;
 }
 
-.email-form::placeholder {
+.form__email::placeholder {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.btn-form {
+.form__btn {
   padding: 10px 29px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  font-family: inherit;
+  color: var(--main-text-color);
+  background-color: var(--accent-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-submit {
+.form__btn:hover,
+.form__btn:focus {
+  background-color: #188ce8;
+}
+
+.form__icon {
   margin-left: 12px;
 }
 
-.title-form {
+.main-form__title {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
@@ -743,7 +777,7 @@ img {
   margin-bottom: 12px;
 }
 
-.form-input {
+.form-field__input {
   margin-bottom: 10px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -756,7 +790,7 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:focus {
+.form-field__input:focus {
   border: 1px solid #2196f3;
   border-radius: 4px;
   outline: none;
@@ -768,7 +802,7 @@ img {
   position: relative;
 }
 
-.label {
+.form-field__label {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.16;
@@ -777,7 +811,7 @@ img {
   margin-bottom: 4px;
 }
 
-.modal-icon {
+.form-field__icon {
   position: absolute;
   bottom: 50%;
   left: 15px;
@@ -789,7 +823,7 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:focus + .modal-icon {
+.form-field__input:focus + .form-field__icon {
   color: var(--accent-color);
 }
 
@@ -798,7 +832,6 @@ img {
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  margin-top: 4px;
   margin-bottom: 20px;
   padding: 12px 16px;
   resize: none;
@@ -821,7 +854,41 @@ img {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.agreement {
+.button-form {
+  margin: 0 auto;
+  margin-top: 30px;
+  padding: 10px 55px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  font-family: inherit;
+  color: var(--main-text-color);
+  background-color: var(--accent-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-form:hover,
+.button-form:focus {
+  background-color: #188ce8;
+}
+
+.agreement-block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.agreement-block__label {
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
@@ -832,27 +899,12 @@ img {
   background-repeat: no-repeat;
 }
 
-.agreement-link {
+.agreement-block__link {
   color: var(--accent-color);
   margin-left: 5px;
 }
 
-.button-form {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 30px;
-  padding: 10px 55px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-}
-
-.agreement-form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.checkbox {
+.agreement-block__checkbox {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -865,7 +917,7 @@ img {
   overflow: hidden;
 }
 
-.custom-box {
+.agreement-block__custom-box {
   display: inline-block;
   width: 16px;
   height: 15px;
@@ -879,7 +931,7 @@ img {
   transition-delay: 0;
 }
 
-.checkbox:checked + .custom-box {
+.agreement-block__checkbox:checked + .agreement-block__custom-box {
   background-image: url(../images/icon.svg);
   background-origin: border-box;
   background-size: contain;
